--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.0.1",
+    "@cloudinary/url-gen": "^1.5.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "cloudinary-core": "^2.12.3",
+    "cloudinary-react": "^1.7.1",
+    "dropbox": "^10.24.0",
     "filestack-js": "^3.25.0",
+    "firebase": "^9.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-drive-picker": "^1.1.4",
+    "react-google-picker": "^0.1.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.0",
     "styled-components": "^5.3.3",
