--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^17.0.2",
     "react-google-drive-picker": "^1.1.4",
     "react-google-picker": "^0.1.0",
+    "react-hook-form": "^7.27.1",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.0",
     "styled-components": "^5.3.3",
